# hana-learncode

./: CHANGELOG.md  PROJECT_SUMMARY.md  QUICKSTART.md  README.md  USAGE_EXAMPLES.md  claude_desktop_config_example.json  claude_desktop_config_example_python.json  main.py  pyproject.toml  test_example.py
core/: __init__.py  code_analyzer.py  code_indexer.py  config.py  flowchart_generator.py  logger.py
prompt/: __init__.py  create_prompt.py
resource/: __init__.py  create_resource.py
tool/: create_tool.py
workflow/: __init__.py  bootstrap.py  engine.py  registry.py  workflow.py  workflow_control.py  workflow_manager.py  workflow_steps.py
workflow/step/: analyze_concept.py  base_step.py  generate_flowchart.py  scan_repository.py  search_functions.py  trace_function_flow.py
